--- a/5.2 Visualization.ipynb
+++ b/5.2 Visualization.ipynb
@@ -2,22 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume</th>\n",
        "      <th>Adj Close</th>\n",
@@ -34,65 +45,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2014-09-30</th>\n",
+       "      <td>90.879997</td>\n",
+       "      <td>88.459999</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>88.849998</td>\n",
+       "      <td>24419400</td>\n",
+       "      <td>88.849998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2014-10-01</th>\n",
-       "      <td>88.699997</td>\n",
        "      <td>88.940002</td>\n",
        "      <td>86.040001</td>\n",
+       "      <td>88.699997</td>\n",
        "      <td>86.099998</td>\n",
        "      <td>24029600</td>\n",
        "      <td>86.099998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-10-02</th>\n",
-       "      <td>86.269997</td>\n",
        "      <td>88.199997</td>\n",
        "      <td>85.611000</td>\n",
+       "      <td>86.269997</td>\n",
        "      <td>87.059998</td>\n",
        "      <td>21469700</td>\n",
        "      <td>87.059998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-10-03</th>\n",
-       "      <td>88.099998</td>\n",
        "      <td>89.940002</td>\n",
        "      <td>87.650002</td>\n",
+       "      <td>88.099998</td>\n",
        "      <td>88.099998</td>\n",
        "      <td>18485700</td>\n",
        "      <td>88.099998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-10-06</th>\n",
-       "      <td>89.150002</td>\n",
        "      <td>89.650002</td>\n",
        "      <td>88.059998</td>\n",
+       "      <td>89.150002</td>\n",
        "      <td>88.309998</td>\n",
        "      <td>9268400</td>\n",
        "      <td>88.309998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-10-07</th>\n",
-       "      <td>87.949997</td>\n",
-       "      <td>89.699997</td>\n",
-       "      <td>87.059998</td>\n",
-       "      <td>87.669998</td>\n",
-       "      <td>12791700</td>\n",
-       "      <td>87.669998</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Open       High        Low      Close    Volume  Adj Close\n",
+       "                 High        Low       Open      Close    Volume  Adj Close\n",
        "Date                                                                       \n",
-       "2014-10-01  88.699997  88.940002  86.040001  86.099998  24029600  86.099998\n",
-       "2014-10-02  86.269997  88.199997  85.611000  87.059998  21469700  87.059998\n",
-       "2014-10-03  88.099998  89.940002  87.650002  88.099998  18485700  88.099998\n",
-       "2014-10-06  89.150002  89.650002  88.059998  88.309998   9268400  88.309998\n",
-       "2014-10-07  87.949997  89.699997  87.059998  87.669998  12791700  87.669998"
+       "2014-09-30  90.879997  88.459999  89.000000  88.849998  24419400  88.849998\n",
+       "2014-10-01  88.940002  86.040001  88.699997  86.099998  24029600  86.099998\n",
+       "2014-10-02  88.199997  85.611000  86.269997  87.059998  21469700  87.059998\n",
+       "2014-10-03  89.940002  87.650002  88.099998  88.099998  18485700  88.099998\n",
+       "2014-10-06  89.650002  88.059998  89.150002  88.309998   9268400  88.309998"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -136,9 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -168,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#df['mvg30']\n",
@@ -180,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -212,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -244,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['diff'] =  df['Close'] - df['Open']\n",
@@ -257,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -289,9 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -332,9 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -364,9 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -396,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -471,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -514,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -587,9 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -619,9 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -669,9 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -729,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
