--- a/7.5 Regression Validation.ipynb
+++ b/7.5 Regression Validation.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
-    "df = pandas.read_csv('data/house-prices.csv')"
+    "df = pandas.read_csv('Data/house-prices.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -118,14 +114,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -227,9 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = house[['SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East', 'North']]\n",
@@ -239,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -293,10 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,12 +322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import statsmodels.api as sm\n",
     "import itertools\n",
     "AICs = {}\n",
     "for k in range(1,len(predictorcols)+1):\n",
@@ -335,48 +335,201 @@
     "        predictors2 = sm.add_constant(predictors)\n",
     "        est = sm.OLS(Y, predictors2)\n",
     "        res = est.fit()\n",
-    "        AICs[variables] = res.aic    \n",
-    "\n"
+    "        AICs[variables] = res.aic    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('SqFt',): 2930.399221278264,\n",
+       " ('Bedrooms',): 2935.671458496874,\n",
+       " ('Bathrooms',): 2936.1658574541634,\n",
+       " ('Offers',): 2963.862468153879,\n",
+       " ('Yes',): 2947.744826785076,\n",
+       " ('East',): 2974.473573747804,\n",
+       " ('North',): 2931.3623066402315,\n",
+       " ('SqFt', 'Bedrooms'): 2915.2245344840526,\n",
+       " ('SqFt', 'Bathrooms'): 2917.6684903192145,\n",
+       " ('SqFt', 'Offers'): 2865.6942475349356,\n",
+       " ('SqFt', 'Yes'): 2896.9093592727936,\n",
+       " ('SqFt', 'East'): 2927.0624268771817,\n",
+       " ('SqFt', 'North'): 2897.745654169053,\n",
+       " ('Bedrooms', 'Bathrooms'): 2916.035689947397,\n",
+       " ('Bedrooms', 'Offers'): 2909.8050956787056,\n",
+       " ('Bedrooms', 'Yes'): 2900.1164490230194,\n",
+       " ('Bedrooms', 'East'): 2936.0608986117104,\n",
+       " ('Bedrooms', 'North'): 2908.6992372764653,\n",
+       " ('Bathrooms', 'Offers'): 2907.5652435435345,\n",
+       " ('Bathrooms', 'Yes'): 2911.69774341551,\n",
+       " ('Bathrooms', 'East'): 2934.545689960338,\n",
+       " ('Bathrooms', 'North'): 2902.5097472661846,\n",
+       " ('Offers', 'Yes'): 2939.20844689237,\n",
+       " ('Offers', 'East'): 2962.720064186388,\n",
+       " ('Offers', 'North'): 2929.775806458391,\n",
+       " ('Yes', 'East'): 2942.28829217051,\n",
+       " ('Yes', 'North'): 2912.954323082766,\n",
+       " ('East', 'North'): 2872.5800563627145,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms'): 2907.000815899825,\n",
+       " ('SqFt', 'Bedrooms', 'Offers'): 2843.9295767865015,\n",
+       " ('SqFt', 'Bedrooms', 'Yes'): 2876.344825432937,\n",
+       " ('SqFt', 'Bedrooms', 'East'): 2913.5512313749327,\n",
+       " ('SqFt', 'Bedrooms', 'North'): 2890.367428108189,\n",
+       " ('SqFt', 'Bathrooms', 'Offers'): 2845.9980117967866,\n",
+       " ('SqFt', 'Bathrooms', 'Yes'): 2887.2072892326632,\n",
+       " ('SqFt', 'Bathrooms', 'East'): 2914.236194286925,\n",
+       " ('SqFt', 'Bathrooms', 'North'): 2888.033277696584,\n",
+       " ('SqFt', 'Offers', 'Yes'): 2831.63455532226,\n",
+       " ('SqFt', 'Offers', 'East'): 2856.479762504593,\n",
+       " ('SqFt', 'Offers', 'North'): 2858.0120865040126,\n",
+       " ('SqFt', 'Yes', 'East'): 2885.3393313043966,\n",
+       " ('SqFt', 'Yes', 'North'): 2872.42118041961,\n",
+       " ('SqFt', 'East', 'North'): 2833.232083725021,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers'): 2875.8064850101,\n",
+       " ('Bedrooms', 'Bathrooms', 'Yes'): 2883.9535408052025,\n",
+       " ('Bedrooms', 'Bathrooms', 'East'): 2915.530504833914,\n",
+       " ('Bedrooms', 'Bathrooms', 'North'): 2891.688479196452,\n",
+       " ('Bedrooms', 'Offers', 'Yes'): 2876.1212136518125,\n",
+       " ('Bedrooms', 'Offers', 'East'): 2909.7160817866798,\n",
+       " ('Bedrooms', 'Offers', 'North'): 2897.0101565848367,\n",
+       " ('Bedrooms', 'Yes', 'East'): 2895.694877420348,\n",
+       " ('Bedrooms', 'Yes', 'North'): 2881.978664321691,\n",
+       " ('Bedrooms', 'East', 'North'): 2865.1945864176973,\n",
+       " ('Bathrooms', 'Offers', 'Yes'): 2886.9093972165865,\n",
+       " ('Bathrooms', 'Offers', 'East'): 2904.5344416559515,\n",
+       " ('Bathrooms', 'Offers', 'North'): 2889.2960833821353,\n",
+       " ('Bathrooms', 'Yes', 'East'): 2904.736917772457,\n",
+       " ('Bathrooms', 'Yes', 'North'): 2884.6660307057455,\n",
+       " ('Bathrooms', 'East', 'North'): 2845.2816438971668,\n",
+       " ('Offers', 'Yes', 'East'): 2933.2079284001748,\n",
+       " ('Offers', 'Yes', 'North'): 2911.8924981689534,\n",
+       " ('Offers', 'East', 'North'): 2874.20979366058,\n",
+       " ('Yes', 'East', 'North'): 2838.5831627932853,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Offers'): 2829.7813142413265,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Yes'): 2871.2162301755466,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'East'): 2905.034736108696,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'North'): 2883.3836458127676,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'Yes'): 2800.9023207769756,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'East'): 2836.951200670925,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'North'): 2841.745164717483,\n",
+       " ('SqFt', 'Bedrooms', 'Yes', 'East'): 2867.0505542740348,\n",
+       " ('SqFt', 'Bedrooms', 'Yes', 'North'): 2859.980090906186,\n",
+       " ('SqFt', 'Bedrooms', 'East', 'North'): 2834.658771033926,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'Yes'): 2814.3478467186924,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'East'): 2835.7456344133498,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'North'): 2840.9770997084643,\n",
+       " ('SqFt', 'Bathrooms', 'Yes', 'East'): 2875.733102825147,\n",
+       " ('SqFt', 'Bathrooms', 'Yes', 'North'): 2864.5628325965004,\n",
+       " ('SqFt', 'Bathrooms', 'East', 'North'): 2825.2470742876903,\n",
+       " ('SqFt', 'Offers', 'Yes', 'East'): 2809.050935059978,\n",
+       " ('SqFt', 'Offers', 'Yes', 'North'): 2827.985422437025,\n",
+       " ('SqFt', 'Offers', 'East', 'North'): 2805.929045591597,\n",
+       " ('SqFt', 'Yes', 'East', 'North'): 2783.192203175976,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'Yes'): 2845.973295559599,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'East'): 2874.0450207228523,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'North'): 2868.348277555212,\n",
+       " ('Bedrooms', 'Bathrooms', 'Yes', 'East'): 2878.130608622273,\n",
+       " ('Bedrooms', 'Bathrooms', 'Yes', 'North'): 2867.1680392477792,\n",
+       " ('Bedrooms', 'Bathrooms', 'East', 'North'): 2844.450848475933,\n",
+       " ('Bedrooms', 'Offers', 'Yes', 'East'): 2870.7750092745096,\n",
+       " ('Bedrooms', 'Offers', 'Yes', 'North'): 2869.130587618044,\n",
+       " ('Bedrooms', 'Offers', 'East', 'North'): 2863.364212884611,\n",
+       " ('Bedrooms', 'Yes', 'East', 'North'): 2825.1279207589587,\n",
+       " ('Bathrooms', 'Offers', 'Yes', 'East'): 2878.1843633318936,\n",
+       " ('Bathrooms', 'Offers', 'Yes', 'North'): 2872.471448479189,\n",
+       " ('Bathrooms', 'Offers', 'East', 'North'): 2840.4614473213255,\n",
+       " ('Bathrooms', 'Yes', 'East', 'North'): 2810.176874592136,\n",
+       " ('Offers', 'Yes', 'East', 'North'): 2840.512878305342,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'Yes'): 2789.5148143560264,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'East'): 2821.6156740184647,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'North'): 2828.6563145874266,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Yes', 'East'): 2861.7264845022632,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Yes', 'North'): 2855.3069911762996,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'East', 'North'): 2827.1498026886024,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'Yes', 'East'): 2779.7703894909137,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'Yes', 'North'): 2801.884537713603,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'East', 'North'): 2803.487432593777,\n",
+       " ('SqFt', 'Bedrooms', 'Yes', 'East', 'North'): 2783.144374438954,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'Yes', 'East'): 2790.178633778983,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'Yes', 'North'): 2812.4224389768956,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'East', 'North'): 2791.0896516858443,\n",
+       " ('SqFt', 'Bathrooms', 'Yes', 'East', 'North'): 2776.9030655919946,\n",
+       " ('SqFt', 'Offers', 'Yes', 'East', 'North'): 2748.8490492259953,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East'): 2837.9283737790706,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'North'): 2842.48462875643,\n",
+       " ('Bedrooms', 'Bathrooms', 'Offers', 'East', 'North'): 2835.1504664520085,\n",
+       " ('Bedrooms', 'Bathrooms', 'Yes', 'East', 'North'): 2805.44429215762,\n",
+       " ('Bedrooms', 'Offers', 'Yes', 'East', 'North'): 2823.342446587056,\n",
+       " ('Bathrooms', 'Offers', 'Yes', 'East', 'North'): 2806.847764041801,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East'): 2766.624649944451,\n",
+       " ('SqFt',\n",
+       "  'Bedrooms',\n",
+       "  'Bathrooms',\n",
+       "  'Offers',\n",
+       "  'Yes',\n",
+       "  'North'): 2790.885108189564,\n",
+       " ('SqFt',\n",
+       "  'Bedrooms',\n",
+       "  'Bathrooms',\n",
+       "  'Offers',\n",
+       "  'East',\n",
+       "  'North'): 2790.245252744008,\n",
+       " ('SqFt', 'Bedrooms', 'Bathrooms', 'Yes', 'East', 'North'): 2777.849673430561,\n",
+       " ('SqFt', 'Bedrooms', 'Offers', 'Yes', 'East', 'North'): 2741.3156609981506,\n",
+       " ('SqFt', 'Bathrooms', 'Offers', 'Yes', 'East', 'North'): 2734.639925628371,\n",
+       " ('Bedrooms',\n",
+       "  'Bathrooms',\n",
+       "  'Offers',\n",
+       "  'Yes',\n",
+       "  'East',\n",
+       "  'North'): 2796.119671677918,\n",
+       " ('SqFt',\n",
+       "  'Bedrooms',\n",
+       "  'Bathrooms',\n",
+       "  'Offers',\n",
+       "  'Yes',\n",
+       "  'East',\n",
+       "  'North'): 2729.3189814012494}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#AICs"
+    "AICs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East', 'North'),\n",
-       "  2729.3189814012489),\n",
+       "  2729.3189814012494),\n",
        " (('SqFt', 'Bedrooms', 'Bathrooms', 'Offers', 'Yes'), 2789.5148143560264),\n",
-       " (('SqFt', 'Offers', 'East', 'North'), 2805.9290455915971),\n",
+       " (('SqFt', 'Offers', 'East', 'North'), 2805.929045591597),\n",
        " (('SqFt', 'Bedrooms', 'Bathrooms', 'East', 'North'), 2827.1498026886024),\n",
-       " (('Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East'), 2837.9283737790702),\n",
-       " (('Bedrooms', 'Bathrooms', 'Offers', 'Yes'), 2845.9732955595991),\n",
+       " (('Bedrooms', 'Bathrooms', 'Offers', 'Yes', 'East'), 2837.9283737790706),\n",
+       " (('Bedrooms', 'Bathrooms', 'Offers', 'Yes'), 2845.973295559599),\n",
        " (('SqFt', 'Offers'), 2865.6942475349356),\n",
        " (('Bedrooms', 'Bathrooms', 'Offers', 'East'), 2874.0450207228523),\n",
        " (('Bedrooms', 'Bathrooms', 'Yes'), 2883.9535408052025),\n",
        " (('SqFt', 'Yes'), 2896.9093592727936),\n",
        " (('Bedrooms', 'North'), 2908.6992372764653),\n",
-       " (('Bedrooms', 'Bathrooms'), 2916.0356899473968),\n",
+       " (('Bedrooms', 'Bathrooms'), 2916.035689947397),\n",
        " (('Bathrooms',), 2936.1658574541634)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,9 +537,16 @@
    "source": [
     "from collections import Counter\n",
     "c = Counter(AICs)\n",
-    "#c.most_common()\n",
+    "#c.most_common()    #最大前10\n",
     "c.most_common()[::-10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -405,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
